fix(link): correct alignment when disabled

--- a/packages/components/src/components/link/_link.scss
+++ b/packages/components/src/components/link/_link.scss
@@ -61,7 +61,6 @@
     @include reset;
     @include type-style('body-short-01');
 
-    display: inline;
     color: $text-disabled;
     font-weight: 400;
     text-decoration: none;
